<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_staff"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_staff" />

    <item
        android:id="@+id/navigation_manage"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_manage" />

    <item
        android:id="@+id/navigation_publish"
        android:icon="@drawable/bottom_nav_selector2"
        android:title="@string/title_system" />

    <item
        android:id="@+id/navigation_statistics"
        android:icon="@drawable/bottom_nav_selector1"
        android:title="@string/title_statistics" />

    <item
        android:id="@+id/navigation_myinfo"
        android:icon="@drawable/bottom_nav_selector3"
        android:title="@string/title_myinfo" />

</menu>